[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ingredient.gd" type="Script" id=2]
[ext_resource path="res://images/ingredients/Berries.png" type="Texture" id=3]
[ext_resource path="res://assets/indicator_small.tscn" type="PackedScene" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform vec4 outline_col : hint_color;
void fragment() {
vec4 col = texture(TEXTURE,UV);
vec2 p = TEXTURE_PIXEL_SIZE;
float a = texture(TEXTURE,UV+vec2(p.x,0)).a;
    a += texture(TEXTURE,UV+vec2(-p.x,0)).a;
    a += texture(TEXTURE,UV+vec2(0,p.y)).a;
    a += texture(TEXTURE,UV+vec2(0,-p.y)).a;
    a = step(a,.5);
    col.rgb = mix(outline_col.xyz, col.rgb, col.a);
    col.a = step(a, col.a);
    COLOR = col;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/outline_col = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("drawing/ingredient_sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("drawing/ingredient_sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.2, 1.2, 1.2, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ingredient" type="TextureButton"]
light_mask = 2
margin_right = 28.0
margin_bottom = 26.0
mouse_default_cursor_shape = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="drawing" type="Node2D" parent="."]

[node name="ingredient_sprite" type="Sprite" parent="drawing"]
material = SubResource( 2 )
use_parent_material = true
texture = ExtResource( 3 )
centered = false

[node name="helpers" type="HBoxContainer" parent="drawing"]
visible = false
margin_top = -5.0
margin_right = 12.0
margin_bottom = -5.0
mouse_filter = 2
custom_constants/separation = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" parent="drawing/helpers" instance=ExtResource( 4 )]
margin_right = 0.0
margin_bottom = 0.0

[node name="B" parent="drawing/helpers" instance=ExtResource( 4 )]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 0.0

[node name="C" parent="drawing/helpers" instance=ExtResource( 4 )]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 0.0

[node name="D" parent="drawing/helpers" instance=ExtResource( 4 )]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 0.0

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/being_held = SubResource( 3 )
anims/hovering_over_potion = SubResource( 4 )
[connection signal="mouse_exited" from="." to="." method="_on_ingredient_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
